# llm-playground

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
configs/experiments/pretraining/: pretrain_verdict.yaml
configs/experiments/pretraining/data_loader/: the_verdict_pretrain.yaml
configs/experiments/pretraining/dataset/: the_verdict_pretrain.yaml
configs/experiments/pretraining/model/: gpt2small_context_256.yaml
configs/experiments/pretraining/optimiser/: adamw.yaml
configs/experiments/pretraining/optimiser/scheduler/: warmup_cosine.yaml
configs/experiments/pretraining/tokenizer/: gpt2.yaml
configs/experiments/pretraining/trainer/: pretrain_verdict.yaml
configs/experiments/pretraining/trainer/sampling/: greedy.yaml
configs/preprocessing/: pretrain_preprocess.yaml
data/processed/train/: the-verdict.txt
data/processed/validation/: the-verdict.txt
scripts/: preprocess_pretraing_data.py  pretrain.py
src/playground/: __init__.py  checkpoint_utils.py  data_utils.py  dataloader.py  inference_utils.py  layers_optimised.py  loggers.py  logit_processors.py  losses.py  metadata.py  trainer.py  trainer_utils.py  transformer.py  transformer_mixin.py  transformer_utils.py  utils.py
src/playground/config/models/: gpt2_small.yaml
test/: test_mha_fused.py
