[project]
name = "llm-playground"
version = "0.1.0"
description = "Tinkering with LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torchtyping>=0.1.5,<0.2",
  "tiktoken>=0.12,<0.13",
  "pandas>=2.3,<3",
  "numpy>=2.3,<3",
  "scikit-learn>=1.7,<2",
  "hydra-core>=1.3,<2",
  "transformers>=4.57,<5",
  "pydantic>=2.12.4,<3"
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pre-commit>=3.0,<4",
]

# pyproject.toml
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playground"]

[tool.hatch.build.targets.sdist]
include = ["src/playground", "pyproject.toml", "README.md"]

[tool.codespell]
# A comma-separated list of words to ignore.
ignore-words-list = "Dout,nd"

[tool.ruff.lint.per-file-ignores]
"src/playground/inference_utils.py" = ["F821"]
"src/playground/layers_optimised.py" = ["F821"]
"src/playground/losses.py" = ["F821"]
"src/playground/logit_processors.py" = ["F821"]
"src/playground/transformer.py" = ["F821"]
"src/playground/transformer_utils.py" = ["F821"]
"src/playground/trainer.py" = ["F821"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
